--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="143dp"
+        android:onClick="MostrarDescargas"
         android:text="Mostrar Descargas" />
 
     <Button
